--- a/src/main/resources/templates/security/registration.html
+++ b/src/main/resources/templates/security/registration.html
@@ -4,18 +4,12 @@
 <head th:replace="common/base :: head"></head>
 <link href="/css/signin.css" rel="stylesheet"/>
 
-<body class="gray-bg">
+<body class="text-center">
 
 <form class="form-signin" th:action="@{/register}" th:object="${user}" method="post">
     <h3 class="h3 mb-3 font-weight-normal">Register</h3>
     <div class="form-group">
         <input type="text" class="form-control" placeholder="User Name" th:field="*{username}" required=""/>
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="First Name" th:field="*{firstName}" required=""/>
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Last Name" th:field="*{lastName}" required=""/>
     </div>
     <div class="form-group">
         <input type="password" class="form-control" placeholder="Password" th:field="*{password}" required=""/>
@@ -25,7 +19,7 @@
     <p class="text-muted text-center">
         <small>Already have an account?</small>
     </p>
-    <a class="btn btn-sm btn-white btn-block" href="login.html">Login</a>
+    <a class="btn btn-sm btn-white btn-block" th:href="@{/login}">Login</a>
 </form>
 </body>
 
